# Turbo-Noodle

./: README.md  chat_ui.sh  ingest.sh  install.sh  pyproject.toml  requirements.txt  server.sh  traces.sh
data/dialogs/: genre_exploration.yaml  inception_deep_dive.yaml  nolan_filmography.yaml
scripts/: chat_client.py  chat_ui.py  db_explorer.py  test_sql_db.py
src/app/: main.py  schemas.py
src/chat/: agent.py
src/chat/prompts/: answer.txt  check_history.txt  sql_generation.txt  synthesis.txt  synthesis_human.txt
src/data/: __init__.py  database.py  ingest.py  models.py
tests/: conftest.py
tests/app/: test_api.py
tests/chat/: test_agent.py
tests/data/: test_database_connector.py  test_ingest.py  test_models.py
